Add Hint Onboarding, Fix #1156, Fix #1256