@@ -24,8 +24,12 @@
 package me.shedaniel.rei.impl.client.gui.widget;
 
 import com.mojang.math.Vector4f;
+import dev.architectury.utils.value.BooleanValue;
+import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.config.ConfigManager;
+import me.shedaniel.rei.api.client.config.ConfigObject;
+import me.shedaniel.rei.api.client.favorites.FavoriteMenuEntry;
 import me.shedaniel.rei.api.client.gui.config.SearchFieldLocation;
 import me.shedaniel.rei.api.client.gui.widgets.Button;
 import me.shedaniel.rei.api.client.gui.widgets.Tooltip;
@@ -39,10 +43,11 @@ import me.shedaniel.rei.impl.client.config.ConfigManagerImpl;
 import me.shedaniel.rei.impl.client.config.ConfigObjectImpl;
 import me.shedaniel.rei.impl.client.gui.ScreenOverlayImpl;
 import me.shedaniel.rei.impl.client.gui.modules.MenuAccess;
-import me.shedaniel.rei.impl.client.gui.modules.MenuEntry;
+import me.shedaniel.rei.impl.client.gui.modules.entries.SeparatorMenuEntry;
 import me.shedaniel.rei.impl.client.gui.modules.entries.SubMenuEntry;
 import me.shedaniel.rei.impl.client.gui.modules.entries.ToggleMenuEntry;
 import me.shedaniel.rei.impl.client.gui.screen.ConfigReloadingScreen;
+import me.shedaniel.rei.impl.client.search.method.DefaultInputMethod;
 import me.shedaniel.rei.impl.common.InternalLogger;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.chat.NarratorChatListener;
@@ -59,6 +64,7 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 public class CraftableFilterButtonWidget {
     public static final UUID FILTER_MENU_UUID = UUID.fromString("2839e998-1679-4f9e-a257-37411d16f1e6");
@@ -77,7 +83,7 @@ public class CraftableFilterButtonWidget {
                 .onRender((matrices, button) -> {
                     button.setTint(ConfigManager.getInstance().isCraftableOnlyEnabled() ? 0x3800d907 : 0x38ff0000);
                     
-                    access.openOrClose(FILTER_MENU_UUID, button.getBounds(), CraftableFilterButtonWidget::menuEntries);
+                    access.openOrClose(FILTER_MENU_UUID, button.getBounds(), () -> menuEntries(access));
                 })
                 .containsMousePredicate((button, point) -> button.getBounds().contains(point) && overlay.isNotInExclusionZones(point.x, point.y))
                 .tooltipLineSupplier(button -> new TranslatableComponent(ConfigManager.getInstance().isCraftableOnlyEnabled() ? "text.rei.showing_craftable" : "text.rei.showing_all"));
@@ -91,11 +97,11 @@ public class CraftableFilterButtonWidget {
         return Widgets.concat(filterButton, overlayWidget);
     }
     
-    private static Collection<MenuEntry> menuEntries() {
+    private static Collection<FavoriteMenuEntry> menuEntries(MenuAccess access) {
         ConfigObjectImpl config = ConfigManagerImpl.getInstance().getConfig();
-        ArrayList<MenuEntry> entries = new ArrayList<>(List.of(
+        ArrayList<FavoriteMenuEntry> entries = new ArrayList<>(List.of(
                 new SubMenuEntry(new TranslatableComponent("text.rei.config.menu.search_field.position"), Arrays.stream(SearchFieldLocation.values())
-                        .<MenuEntry>map(location -> ToggleMenuEntry.of(new TextComponent(location.toString()),
+                        .<FavoriteMenuEntry>map(location -> ToggleMenuEntry.of(new TextComponent(location.toString()),
                                         () -> config.getSearchFieldLocation() == location,
                                         bool -> config.setSearchFieldLocation(location))
                                 .withActive(() -> config.getSearchFieldLocation() != location)
@@ -105,7 +111,7 @@ public class CraftableFilterButtonWidget {
         
         List<Map.Entry<ResourceLocation, InputMethod<?>>> applicableInputMethods = getApplicableInputMethods();
         if (applicableInputMethods.size() > 1) {
-            entries.add(new SubMenuEntry(new TranslatableComponent("text.rei.config.menu.search_field.input_method"), createInputMethodEntries(applicableInputMethods)));
+            entries.add(new SubMenuEntry(new TranslatableComponent("text.rei.config.menu.search_field.input_method"), createInputMethodEntries(access, applicableInputMethods)));
         }
         
         return entries;
@@ -118,10 +124,10 @@ public class CraftableFilterButtonWidget {
                 .toList();
     }
     
-    public static List<MenuEntry> createInputMethodEntries(List<Map.Entry<ResourceLocation, InputMethod<?>>> applicableInputMethods) {
+    public static List<FavoriteMenuEntry> createInputMethodEntries(MenuAccess access, List<Map.Entry<ResourceLocation, InputMethod<?>>> applicableInputMethods) {
         ConfigObjectImpl config = ConfigManagerImpl.getInstance().getConfig();
-        return applicableInputMethods.stream()
-                .<MenuEntry>map(pair -> ToggleMenuEntry.of(pair.getValue().getName(),
+        List<FavoriteMenuEntry> entries = applicableInputMethods.stream()
+                .<FavoriteMenuEntry>map(pair -> ToggleMenuEntry.of(pair.getValue().getName(),
                                 () -> Objects.equals(config.getInputMethodId(), pair.getKey()),
                                 bool -> {
                                     ExecutorService service = Executors.newSingleThreadExecutor();
@@ -149,14 +155,38 @@ public class CraftableFilterButtonWidget {
                                     });
                                     reloadingScreen.setSubtitle(() -> new TranslatableComponent("text.rei.input.methods.reload.progress", String.format("%.2f", progress[0] * 100)));
                                     Minecraft.getInstance().setScreen(reloadingScreen);
+                                    access.close();
                                     future.whenComplete((unused, throwable) -> {
                                         service.shutdown();
                                     });
+                                    ScreenOverlayImpl.getInstance().getHintsContainer().addHint(12, () -> new Point(getCraftableFilterBounds().getCenterX(), getCraftableFilterBounds().getCenterY()),
+                                            "text.rei.hint.input.methods", List.of(new TranslatableComponent("text.rei.hint.input.methods")));
                                 })
                         .withActive(() -> !Objects.equals(config.getInputMethodId(), pair.getKey()))
                         .withTooltip(() -> Tooltip.create(Widget.mouse(), pair.getValue().getDescription()))
                 )
-                .toList();
+                .collect(Collectors.toList());
+        InputMethod<?> active = InputMethod.active();
+        if (!(active instanceof DefaultInputMethod)) {
+            entries.add(0, new SeparatorMenuEntry());
+            entries.add(0, FavoriteMenuEntry.createToggle(new TranslatableComponent("text.rei.input.methods.tooltip.hints"), new BooleanValue() {
+                @Override
+                public void accept(boolean t) {
+                    ConfigManagerImpl.getInstance().getConfig().setDoDisplayIMEHints(!getAsBoolean());
+                }
+                
+                @Override
+                public boolean getAsBoolean() {
+                    return ConfigObject.getInstance().doDisplayIMEHints();
+                }
+            }));
+        }
+        List<FavoriteMenuEntry> optionsMenuEntries = active.getOptionsMenuEntries();
+        if (!optionsMenuEntries.isEmpty()) {
+            entries.add(new SeparatorMenuEntry());
+            entries.addAll(optionsMenuEntries);
+        }
+        return entries;
     }
     
     private static Rectangle getCraftableFilterBounds() {
